# lab-parser

./: .gitignore  Cargo.toml  README.md  test.dae
src/: main.rs
src/anim/: bone.rs  d3d.rs  mod.rs
src/tests/: anim-quat.lab
src/ui/: mod.rs  opengl.rs
