[package]
name = "lab-parser"
version = "0.1.0"
authors = ["aniru"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.8.0"
byteorder = "1"
bincode= "1.3.3"
serde = { version = "1.0", features = ["derive"] }
glium = "0.29.1"
cgmath = { git = "https://github.com/Perseus/cgmath" }
obj="0.10"
xmlwriter="0.1.0"
chrono="0.4.19"
collada="0.13.0"